--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -38,6 +38,9 @@
     <Filter Include="Object\GameObject\Village">
       <UniqueIdentifier>{f4c69b1e-892f-494c-ba6a-74302f6bb511}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Object\GameObject\HistoryBook">
+      <UniqueIdentifier>{6c73d237-7a73-40fe-abd6-658616eb5e61}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -124,6 +127,9 @@
     </ClInclude>
     <ClInclude Include="GameObject\Village\TextBox.h">
       <Filter>Object\GameObject\Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\HistoryBook\HistoryBook.h">
+      <Filter>Object\GameObject\HistoryBook</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +225,9 @@
     </ClCompile>
     <ClCompile Include="GameObject\Village\TextBox.cpp">
       <Filter>Object\GameObject\Village</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\HistoryBook\HistoryBook.cpp">
+      <Filter>Object\GameObject\HistoryBook</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
