--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -170,7 +170,9 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
     <ClInclude Include="GameObject\HistoryBook\HistoryBook.h" />
+    <ClInclude Include="GameObject\HistoryChip\AburaChip.h" />
     <ClInclude Include="GameObject\HistoryChip\FireChip.h" />
+    <ClInclude Include="GameObject\HistoryChip\TetuChip.h" />
     <ClInclude Include="GameObject\Player\Player.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h" />
@@ -211,7 +213,9 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
     <ClCompile Include="GameObject\HistoryBook\HistoryBook.cpp" />
+    <ClCompile Include="GameObject\HistoryChip\AburaChip.cpp" />
     <ClCompile Include="GameObject\HistoryChip\FireChip.cpp" />
+    <ClCompile Include="GameObject\HistoryChip\TetuChip.cpp" />
     <ClCompile Include="GameObject\Player\Player.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp" />
