--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyFallState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyStartAttackState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h" />
@@ -176,6 +177,7 @@
     <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerStateIdol.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerStateRun.h" />
+    <ClInclude Include="GameObject\Village\Clerk.h" />
     <ClInclude Include="GameObject\Village\ContinentObject.h" />
     <ClInclude Include="GameObject\Village\HistoryButton.h" />
     <ClInclude Include="GameObject\Village\HistoryInfo.h" />
@@ -205,6 +207,7 @@
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyFallState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyStartAttackState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp" />
@@ -217,6 +220,7 @@
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateRun.cpp" />
+    <ClCompile Include="GameObject\Village\Clerk.cpp" />
     <ClCompile Include="GameObject\Village\ContinentObject.cpp" />
     <ClCompile Include="GameObject\Village\HistoryButton.cpp" />
     <ClCompile Include="GameObject\Village\HistoryManager.cpp" />
