--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -1,270 +1,149 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Scene">
-      <UniqueIdentifier>{2d7f74e5-1894-4735-8f9a-b757a310c779}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object">
-      <UniqueIdentifier>{7358b4a8-2cf9-48a7-b0ae-8872e2430573}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject">
-      <UniqueIdentifier>{f24b4616-b416-4e27-b284-e4af43f43dd7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\Component">
-      <UniqueIdentifier>{20e54de8-392f-4837-8a39-b2bb28e4e4a2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\Player">
-      <UniqueIdentifier>{7bb9c7ae-50ea-4b2b-908f-89d06d8287ca}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\Enemy">
-      <UniqueIdentifier>{3a9981de-6ade-4d8b-a91b-cb293836348f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\Enemy\HFSM">
-      <UniqueIdentifier>{733b9d53-8cd0-42af-a23d-12253d32e114}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\Player\PlayerState">
-      <UniqueIdentifier>{2a0ebc1d-7cd5-449f-8181-a17ab1534458}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\HistoryChip">
-      <UniqueIdentifier>{63c73dbe-0b9b-4ff5-a530-e80258d41769}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\Component">
-      <UniqueIdentifier>{3baa3172-92f9-4cda-80c2-971cd765a60a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\GameObject\Village">
-      <UniqueIdentifier>{f4c69b1e-892f-494c-ba6a-74302f6bb511}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Decide.h" />
-    <ClInclude Include="GameSystem.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="TitleScene.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="GameCamera.h">
-      <Filter>Object\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="GameLight.h">
-      <Filter>Object\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="GameScene.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="GameShadowCamera.h">
-      <Filter>Object\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="Ground.h">
-      <Filter>Object\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="Sky.h">
-      <Filter>Object\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\Enemy.h">
-      <Filter>Object\GameObject\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\EnemyCharacter.h">
-      <Filter>Object\GameObject\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="AttackCollision.h" />
-    <ClInclude Include="GameObject\Enemy\SearchViewAngle.h">
-      <Filter>Object\GameObject\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Player\Player.h">
-      <Filter>Object\GameObject\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateIdol.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateRun.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\HistoryChip\FireChip.h">
-      <Filter>Object\GameObject\HistoryChip</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Component\ObjectRotation.h">
-      <Filter>Object\GameObject\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyStartAttackState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\MessageManager.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\TextBox.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryManager.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryInfo.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\ContinentObject.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryMenu.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryButton.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\HistoryBook\HistoryBook.h" />
-    <ClInclude Include="GameObject\Village\HistoryMenuSelect.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="GameObject\Enemy\HFSM\EnemyFallState.h">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryMenuSelect.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="GameObject\Village\Shop.h">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Decide.rc">
-      <Filter>リソース ファイル</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="small.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="Decide.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Decide.cpp" />
-    <ClCompile Include="TitleScene.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="GameLight.cpp">
-      <Filter>Object\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="GameScene.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="GameShadowCamera.cpp">
-      <Filter>Object\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="Ground.cpp">
-      <Filter>Object\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="Sky.cpp">
-      <Filter>Object\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="GameCamera.cpp">
-      <Filter>Object\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\Enemy.cpp">
-      <Filter>Object\GameObject\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp">
-      <Filter>Object\GameObject\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
     <ClCompile Include="AttackCollision.cpp" />
-    <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp">
-      <Filter>Object\GameObject\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Player\Player.cpp">
-      <Filter>Object\GameObject\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateRun.cpp">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    <ClCompile Include="Decide.cpp" />
+    <ClCompile Include="GameCamera.cpp" />
+    <ClCompile Include="GameLight.cpp" />
+    <ClCompile Include="GameObject\Component\ObjectRotation.cpp" />
+    <ClCompile Include="GameObject\Enemy\Enemy.cpp" />
+    <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyStartAttackState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
+    <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
+    <ClCompile Include="GameObject\Player\Player.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateRun.cpp" />
+    <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GameShadowCamera.cpp" />
+    <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="Sky.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
+    <ClCompile Include="GameObject\Village\ContinentObject.cpp">
+      <Filter>Village</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\HistoryChip\FireChip.cpp">
-      <Filter>Object\GameObject\HistoryChip</Filter>
+      <Filter>Village</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Component\ObjectRotation.cpp">
-      <Filter>Object\GameObject\Component</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyStartAttackState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\MessageManager.cpp">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\TextBox.cpp">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\HistoryManager.cpp">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\ContinentObject.cpp">
-      <Filter>Object\GameObject\Village</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\HistoryMenu.cpp">
-      <Filter>Object\GameObject\Village</Filter>
+    <ClCompile Include="GameObject\HistoryBook\HistoryBook.cpp">
+      <Filter>Village</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Village\HistoryButton.cpp">
-      <Filter>Object\GameObject\Village</Filter>
+      <Filter>Village</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\HistoryBook\HistoryBook.cpp" />
-    <ClCompile Include="GameObject\Village\HistoryMenuSelect.cpp" />
-    <ClCompile Include="stdafx.cpp" />
-<<<<<<< HEAD
-    <ClCompile Include="GameObject\Enemy\HFSM\EnemyFallState.cpp">
-      <Filter>Object\GameObject\Enemy\HFSM</Filter>
-=======
+    <ClCompile Include="GameObject\Village\HistoryManager.cpp">
+      <Filter>Village</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\HistoryMenu.cpp">
+      <Filter>Village</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\HistoryMenuSelect.cpp">
+      <Filter>Village</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\MessageManager.cpp">
+      <Filter>Village</Filter>
+    </ClCompile>
     <ClCompile Include="GameObject\Village\NPC.cpp">
-      <Filter>Object\GameObject\Village</Filter>
->>>>>>> 7a3006c1b43f228e5b6cfea755a2f8d13cfb3e09
+      <Filter>Village</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Village\Shop.cpp">
-      <Filter>Object\GameObject\Village</Filter>
+      <Filter>Village</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Village\TextBox.cpp">
+      <Filter>Village</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyFallState.cpp" />
+    <ClCompile Include="GameObject\Village\Clerk.cpp">
+      <Filter>Village</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AttackCollision.h" />
+    <ClInclude Include="Decide.h" />
+    <ClInclude Include="GameCamera.h" />
+    <ClInclude Include="GameLight.h" />
+    <ClInclude Include="GameObject\Component\ObjectRotation.h" />
+    <ClInclude Include="GameObject\Enemy\Enemy.h" />
+    <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyStartAttackState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
+    <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
+    <ClInclude Include="GameObject\Player\Player.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateIdol.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateRun.h" />
+    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="GameShadowCamera.h" />
+    <ClInclude Include="GameSystem.h" />
+    <ClInclude Include="Ground.h" />
+    <ClInclude Include="Resource.h" />
+    <ClInclude Include="Sky.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="GameObject\Village\ContinentObject.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\HistoryChip\FireChip.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\HistoryBook\HistoryBook.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\HistoryButton.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\HistoryInfo.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\HistoryManager.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\HistoryMenu.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\HistoryMenuSelect.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\MessageManager.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\NPC.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\TextBox.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyFallState.h" />
+    <ClInclude Include="GameObject\Village\Clerk.h">
+      <Filter>Village</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Decide.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Decide.ico" />
+    <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Village">
+      <UniqueIdentifier>{82346f2d-f61a-47e3-857e-d725c053f361}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
