エネミーの徘徊範囲仮実装 コライダーの描画を改造中

--- a/game/fbEngine/fbEngine/fbEngine.vcxproj
+++ b/game/fbEngine/fbEngine/fbEngine.vcxproj
@@ -52,6 +52,7 @@
     <ClCompile Include="_Object\_Component\_3D\SkinModel.cpp" />
     <ClCompile Include="_Object\_Component\_Physics\BoxCollider.cpp" />
     <ClCompile Include="_Object\_Component\_Physics\CapsuleCollider.cpp" />
+    <ClCompile Include="_Object\_Component\_Physics\Collider.cpp" />
     <ClCompile Include="_Object\_Component\_Physics\Collision.cpp" />
     <ClCompile Include="_Object\_Component\_Physics\GostCollision.cpp" />
     <ClCompile Include="_Object\_Component\_Physics\MeshCollider.cpp" />
