歴史書のHFSMの実装

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -170,6 +170,11 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookState.h" />
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateClose.h" />
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateCloseing.h" />
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateOpen.h" />
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateOpening.h" />
     <ClInclude Include="GameObject\HistoryBook\HistoryBook.h" />
     <ClInclude Include="GameObject\HistoryChip\AburaChip.h" />
     <ClInclude Include="GameObject\HistoryChip\FireChip.h" />
@@ -216,6 +221,10 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
+    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateClose.cpp" />
+    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateCloseing.cpp" />
+    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateOpen.cpp" />
+    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateOpening.cpp" />
     <ClCompile Include="GameObject\HistoryBook\HistoryBook.cpp" />
     <ClCompile Include="GameObject\HistoryChip\AburaChip.cpp" />
     <ClCompile Include="GameObject\HistoryChip\FireChip.cpp" />
